# freelance_backend

./: .gitignore  README.md  pyproject.toml
src/: config.py  connect.py  dependencies.py  main.py
src/models/: __init__.py  categories.py  executer.py  services.py  skills.py  users.py
src/repository/: __init__.py  categories.py  executers.py  services.py  skills.py  users.py
src/routes/: __init__.py  auth.py  categories.py  executers.py  services.py  skills.py
src/schemas/: auth.py  categories.py  executer.py  services.py  skills.py  user.py
src/service/: auth.py  categories.py  executers.py  services.py  skills.py
src/templates/email/: welcome.html
src/utils/: models.py  repository.py  skills_worker.py  smtp.py  unit_of_work.py
src/workers/: tasks.py
